# prev-work-lego

./: README.md
AoC2020/: log.txt  package-lock.json  package.json  readfile.js  readfile.ts
AoC2020/1/: 1-a.js  1-a.ts  1-b.js  1-b.ts
AoC2020/2/: 2-a.js  2-a.ts  2-b.js  2-b.ts
AoC2020/3/: 3a.js  3a.ts  3b.js  3b.ts
AoC2020/4/: 4a.js  4a.ts  4b.js  4b.ts  aaaa.js  aaaa.ts
AoC2020/5/: 5a.js  5a.ts  5b.js  5b.ts
AoC2020/6/: 6a.js  6a.ts
Bachelor/: template.yaml
Bachelor/UserService/UserCore/: ConfirmationEmailGenerator.cs  ConfirmationHandler.cs
Bachelor/UserService/UserCore/Contracts/: IApiRouteResolver.cs  IClientRouteResolver.cs  IEmailConfirmer.cs
Bachelor/UserService/UserExternal/: AmplifyRouteResolver.cs  ApiGatewayRouteResolver.cs  CognitoEmailConfirmer.cs  UserExternal.csproj
Bachelor/UserService/UserInfrastructure/: LambdaSerializerConfig.cs  UserInfrastructure.csproj
Bachelor/UserService/UserInfrastructure/Cognito/: CustomMessageEvent.cs
Bachelor/UserService/UserInfrastructure/Functions/: ConfirmUserFunction.cs  GenerateEmailConfirmationFunction.cs
TechBlog/: Advanced-types.md
weather-tui/: Cargo.toml
weather-tui/src/: main.rs
weather-tui/src/data/: mod.rs
weather-tui/src/data/models/: location.rs  mod.rs  secrets.rs  weather.rs
weather-tui/src/ui/: app.rs  draw_functions.rs  events.rs  mod.rs
weather-tui/src/ui/util/: stateful_list.rs
weather-tui/src/weather_requests/: mod.rs
