[package]
name = "weather-tui"
version = "0.1.0"
authors = ["Christoffer Nørbjerg <Chrisnorbjerg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9"
termion = "1.5"
rusqlite = "0.16"
geocoding = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"]}
futures = "0.3.5"
hex = "0.3.1"
argh = "0.1"